test_regress/t/t_randomize_inline_var_ctl_unsup_1.out
%Error-UNSUPPORTED: t/t_randomize_inline_var_ctl_unsup_1.v:20:35: Unsupported: Non-variable expression as 'randomize()' argument
                                                                : ... note: In instance 't'
   20 |     void'(foo.randomize(Foo::get().x));
      |                                   ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_randomize_inline_var_ctl_unsup_1.v:21:32: Unsupported: Non-variable expression as 'randomize()' argument
                                                                : ... note: In instance 't'
   21 |     void'(foo.randomize(foos[0].x));
      |                                ^
%Error: Exiting due to
